<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.HomeScreenActivity">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </ProgressBar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigationView"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:text="@string/personal_messages_to_you"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <ImageView
                        android:id="@+id/userProfileImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/user">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/firstNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa"
                            android:textColor="@color/white"
                            android:textSize="20sp">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa"
                            android:text="@string/tap_to_review_50_notes"
                            android:textColor="@color/white"
                            android:textSize="15sp">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/interested_in_you"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/premium_members_likes"
                    android:textSize="15sp">

                </TextView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/yellow"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/upgrade"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profileRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none"
                android:paddingBottom="10dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        android:visibility="gone"
        app:menu="@menu/bottom_navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>