<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.8dp">

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:autofillHints="Phone Number"
                android:background="@android:color/transparent"
                android:fontFamily="@font/comfortaa"
                android:inputType="phone"
                tools:ignore="LabelFor">

            </EditText>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/continueCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="15sp">

        </TextView>

    </androidx.cardview.widget.CardView>

</LinearLayout>