<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/editCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:contentPadding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/edit">

            </ImageView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/enter_the_otp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0.8dp">

        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:autofillHints="OTP"
            android:background="@android:color/transparent"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:inputType="phone"
            tools:ignore="LabelFor">

        </EditText>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/continueCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/next"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

</LinearLayout>